--- a/style.css
+++ b/style.css
@@ -1224,7 +1224,7 @@ select {
   box-shadow: 0 10px 40px rgba(99, 102, 241, 0.3);
   transition: all 0.3s ease;
   transform: translateY(0);
-  width: 543px;
+  width:100%;
   height: 371px;
   display: flex;
   justify-content: center;
